--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,16 +7,15 @@ body {
 
 .field {
     padding: 3px;
-    width: 500px;
-    height: 520px;
-    border: 1px solid black;
+    width: 510px;
+    height: 530px;
 }
 
 .cell {    
-    margin: 1px;
+    margin: 3px;
     width: 120px;
     height: 120px;
-    border: 1px solid grey;
+    background-color:grey;
     display: inline-block;
 }
 
